# CKBuildingBlocks

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Version.rc.in
3DTrans/: CMakeLists.txt  PortalsManager.cpp  PortalsManager.h
3DTrans/Behaviors/: MoveTo.cpp  PathFollow.cpp  PlayAnimEntity.cpp
BuildingBlocksAddons1/: BuildingBlocksAddons.rc  BuildingBlocksAddons1.cpp  CMakeLists.txt  LightmapGenerator.cpp  NearestPointGrid.cpp  PolyhedronConstructor.cpp  TextureProcessing.cpp  TextureProcessing.h
BuildingBlocksAddons1/Behaviors/: AnimRecorder.cpp  BlendTextures.cpp  CombineTexture.cpp  FilterTexture.cpp  FullscreenResolutions.cpp  GetTextureInfo.cpp  LensFlare.cpp  LightMap.cpp  ReplaceRendering.cpp  SetMaterialEffect.cpp  ShadowStencil.cpp  StaticLightMap.cpp  SynchroCatcher.cpp  (+1 more)
Cameras/: CMakeLists.txt
Characters/: CMakeLists.txt  Characters.cpp  Characters.rc
Characters/Behaviors/: AddAnimation.cpp  AnimSynchronizer.cpp  CharacterControl1.cpp  CharacterControl2.cpp  CharacterPathFollow.cpp  CharacterPathFollow2.cpp  CreateMergedAnimation.cpp  CreateMergedAnimation2.cpp  ExcludeFromAnimation.cpp  GetNearest.cpp  Goto.cpp  IKPosition.cpp  LODAnimation.cpp  SetAnimationFrame.cpp  SetAnimationStep.cpp  SetBodyPartAnimationFrame.cpp  SetFloorReference.cpp  SetMergedAnimationFactor.cpp  ShareCharacterAnimation.cpp  UnlimitedController.cpp  UnlimitedParams.h
Collision/: BoundariesManager2.cpp  CKCollisionManager_AdvancedIntersectionFunctions.cpp  CMakeLists.txt  CalcCollision.cpp  CollisionBehaviors.cpp  CollisionManager.cpp  FloorManager.cpp  N3dGraph.cpp  N3dGraph.h
Controllers/: CMakeLists.txt  Controllers.cpp
Grids/: CMakeLists.txt  CharacterGridPathFollow.cpp  ComputePath.h  ContextInfo.cpp  ContextInfo.h  FollowProblem.cpp  FollowProblem.h  GridInfo.cpp  GridInfo.h  GridManager.cpp  GridManager.h  GridPathInit.cpp  GridPathManager.cpp  GridPathManager.h  GridPathManagerFollow.cpp  GridPathSolver.cpp  Grids.cpp  Grids.rc  LinkerGraph.h  Node.h  NodeGrid.cpp  NodeGrid.h  NodeLinker.cpp  NodeLinker.h  OpenList.cpp  OpenList.h  PFUtils.h  Path.cpp  Path.h  PathProblem.cpp  PathProblem.h  Pathfinding.h  Sliceable.h
Grids/Behaviors/: FillGridWithShape.cpp  FillLayer.cpp  GetLayerSquare.cpp  GetPosFromValue.cpp  LayerSlider.cpp  SetGridPriority.cpp  SetLayerSquare.cpp  SetLayerVisibility.cpp  SwitchIfSquare.cpp
Interface/: CKFontManager.cpp  CKFontManager.h  CKFontManagerInterface.h  CKStbFontBackend.cpp  CKStbFontBackend.h  CKTextureFont.cpp  CKTextureFont.h  CMakeLists.txt  CompiledData.cpp  CompiledData.h  Interface.cpp
Interface/Behaviors/: 2dPick.cpp  BitmapTextDisplay.cpp  CameraView.cpp  CreateSystemFont.cpp  MouseCursor.cpp  PushButton.cpp  SetCaretPosition.cpp  Slider.cpp  Text2D.cpp  Text3D.cpp  TextDisplay.cpp
Interface/tests/: test_stb_font_backend.cpp
Lights/: CMakeLists.txt  Lights.cpp
Logics/: CMakeLists.txt
Materials-Textures/: CMakeLists.txt
MeshModifiers/: CMakeLists.txt  MeshModifiers.cpp  MeshModifiers.rc
MeshModifiers/Behaviors/: AddMesh.cpp  Bend.cpp  ChangeReferential.cpp  Explode.cpp  Get LOD Attribute.cpp  InverseWinding.cpp  LOD Alpha.cpp  LOD Manager Options.cpp  LOD Patch.cpp  LOD Progressive.cpp  LOD Simple.cpp  LODManager.cpp  LODManager.h  LevelOfDetail.cpp  MeshModificationsCallback.cpp  MeshMorpher.cpp  MeshSinus.cpp  MeshTextureDisplace.cpp  MultiMeshMorpher.cpp  Noise.cpp  PatchMeshSteps.cpp  Precompute Lighting.cpp  RemoveMesh.cpp  SelectMesh.cpp  Set LOD Attribute.cpp  SetFace.cpp  SetFaceCount.cpp  SetProgressiveMesh.cpp  SetVertex.cpp  SetVertexCount.cpp  SkinJoin.cpp  Stretch.cpp  Taper.cpp  Twist.cpp  VerticesTranslate.cpp
MidiManager/: CMakeLists.txt  MidiBehaviors.cpp  MidiManager.cpp  MidiManager.h  MidiManager.rc
MidiManager/Behaviors/: MidiEvent.cpp  MidiPlayer.cpp  Read Midi Signal.cpp  SetInMidiPort.cpp  SwicthOnMidi.cpp
MidiManager/MidiSound/: midisound.cpp  midisound.h  muldiv32.h  smf.cpp  smf.h  smfi.h  smfread.cpp
Narratives/: CMakeLists.txt  Narratives.cpp
ParticlesSystem/: CMakeLists.txt  CubicEmitter.cpp  CubicEmitter.h  CubicParticleSystem.cpp  CurveEmitter.cpp  CurveParticleSystem.cpp  CylindricalEmitter.cpp  CylindricalEmitter.h  CylindricalParticleSystem.cpp  DiscEmitter.cpp  DiscEmitter.h  DiscParticleSystem.cpp  GeneralParticleSystem.cpp  GeneralParticleSystem.h  LineEmitter.cpp  LinearParticleSystem.cpp  ObjectEmitter.cpp  ObjectEmitter.h  ObjectParticleSystem.cpp  Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleGuids.h  ParticleManager.cpp  ParticleManager.h  ParticleSystemInteractors.cpp  ParticleSystemRenderCB.cpp  ParticleSystemRenderCallBacks.h  ParticleSystems.cpp  ParticleSystems.rc  ParticleTools.cpp  ParticleTools.h  PlanarEmitter.cpp  PlanarEmitter.h  PlanarParticleSystem.cpp  PointEmitter.cpp  PointEmitter.h  PointParticleSystem.cpp  SphericalEmitter.h  (+3 more)
Sounds/: CMakeLists.txt  SoundBehavior.cpp
TT_DatabaseManager_RT/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h
TT_Gravity_RT/: CMakeLists.txt  TT_Gravity_RT.cpp
TT_InterfaceManager_RT/: CMakeLists.txt  GameInfo.h  InterfaceManager.cpp  InterfaceManager.h  NemoArray.cpp  RegistryUtils.cpp  RegistryUtils.h
TT_ParticleSystems_RT/: CMakeLists.txt  CubicEmitter.h  CurveEmitter.h  CylindricalEmitter.h  DiscEmitter.h  GeneralParticleSystem.cpp  LineEmitter.h  ObjectEmitter.cpp  ObjectEmitter.h  Particle.cpp  Particle.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleManager.cpp  ParticleManager.h  ParticleSystemDeflectors.cpp  ParticleSystemInteractors.cpp  ParticleSystemRenderCallbacks.cpp  PlanarEmitter.h  PointEmitter.h  SphericalEmitter.h  TimePointEmitter.h  WaveEmitter.h
TT_Toolbox_RT/: CMakeLists.txt  DebugManager.cpp  TT_Toolbox_RT.cpp
Visuals/: CMakeLists.txt
WorldEnvironment/: CMakeLists.txt
physics_RT/: CKIpionManager.cpp  CKIpionManager.h  CMakeLists.txt  PhysicsCallback.cpp  PhysicsContact.cpp  PhysicsContact.h
physics_RT/Behaviors/: GetProfilerValues.cpp  Physicalize.cpp  PhysicsBallJoint.cpp  PhysicsCollisionDetection.cpp  PhysicsContinuousContact.cpp
(+204 files in other folders)
